--- a/index.html
+++ b/index.html
@@ -3,12 +3,13 @@
 
 <head>
     <meta charset="UTF-8" />
-    <link rel="stylesheet" href="./assets/style.css">
+    <link rel="stylesheet" href="./assets/css/style.css">
     <title>website</title>
 </head>
 
 <body>
-    <div class="header">
+    <!-- Changed div element to "article" -->
+    <article class="header">
         <h1>Hori<span class="seo">seo</span>n</h1>
         <div>
             <ul>
@@ -23,7 +24,7 @@
                 </li>
             </ul>
         </div>
-    </div>
+    </article>
     <div class="hero"></div>
     <div class="content">
         <div class="asset1">
@@ -48,7 +49,8 @@
             </p>
         </div>
     </div>
-    <div class="benefits">
+    <!--Changing div class to sidebar-->
+    <sidebar class="benefits">
         <div class="benefit-lead">
             <h3>Lead Generation</h3>
             <img src="./assets/images/lead-generation.png" />
@@ -70,7 +72,7 @@
                 As the search ranking for your business increases, your advertising costs decrease, and you no longer need to advertise your page.
             </p>
         </div>
-    </div>
+    </sidebar>
     <div class="footer">
         <h2>Made with ❤️️ by Horiseon</h2>
         <p>
