--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8" />
     <link rel="stylesheet" href="./assets/css/style.css">
-    <title>website</title>
+    <title>Horiseon Website</title>
 </head>
 
 <body>
@@ -25,23 +25,24 @@
             </ul>
         </nav>
     </nav>
-    <section class="hero" title="Business group doing business"></section>
+    <!--Div elements in the main part of page were changed to Section and Article -->
+    <section class="hero" alt="Business group doing business"></section>
     <section class="content">
-        <article id="search-engine-optimization" class="asset1">
+        <article id="search-engine-optimization" class="mainSec">
             <img src="./assets/images/search-engine-optimization.jpg" alt= "Image of notebook" class="float-left" />
             <h2>Search Engine Optimization</h2>
             <p>
                 The dominance of mobile internet use means that users are searching for the right business as they travel, shop, or sit on their couch at home. Search Engine Optimization (SEO) allows you to increase your visibility and find the right customers for your business.
             </p>
         </article>
-        <article id="online-reputation-management" class="asset1">
+        <article id="online-reputation-management" class="mainSec">
             <img src="./assets/images/online-reputation-management.jpg" alt= "Image man on laptop" class="float-right" />
             <h2>Online Reputation Management</h2>
             <p>
                 The web is full of opinions, and some of these can be negative. Social media allows anyone with an internet connection to say whatever they want about your business. Online Reputation Management gives you the control over what potential customers see when they search for your business.
             </p>
         </article>
-        <article id="social-media-marketing" class="asset1">
+        <article id="social-media-marketing" class="mainSec">
             <img src="./assets/images/social-media-marketing.jpg" alt="People standing in conference, tweeting" class="float-left" />
             <h2>Social Media Marketing</h2>
             <p>
